// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot testing should render circular when given circular property 1`] = `
<svg
  height={120}
  width={120}
>
  <circle
    className="circular error-text"
    cx={60}
    cy={60}
    fill="transparent"
    r={52}
    strokeDasharray="326.7256359733385 326.7256359733385"
    strokeWidth={4}
    style={
      Object {
        "strokeDashoffset": "163.36281798666926",
      }
    }
  />
</svg>
`;

exports[`snapshot testing should render horizontally when given horizontal property 1`] = `
<div
  className="outer-horizontal"
>
  <div
    className="inner-horizontal primary"
    style={
      Object {
        "width": "50%",
      }
    }
  />
</div>
`;

exports[`snapshot testing should render vertically when given vertical property 1`] = `
<div
  className="wrapper"
  style={
    Object {
      "height": "300px",
    }
  }
>
  <div
    className="outer-vertical primary"
    style={
      Object {
        "height": "300px",
      }
    }
  >
    <div
      className="inner-vertical"
      style={
        Object {
          "height": "50%",
        }
      }
    />
  </div>
</div>
`;
